syntax = "proto3";

option go_package = "github.com/vibhav-mulay/vmdiff/internal/proto";

message DeltaEntry {
	string action     = 1;
	int64  offset     = 2;
	int64  size       = 3;
	bytes  data       = 4;
	int64  old_offset = 5;
}

message EntryHeader {
	fixed64 size = 1;
}


